Source/WebCore: When performing AXPress, check to see if the menu list is disabled. https://bugs.webkit.org/show_bug.cgi?id=193878

Patch by Eric Liang <ericliang@apple.com> on 2019-02-08
Reviewed by Chris Fleizach.

Test: accessibility/mac/press-not-work-for-disabled-menu-list.html

* accessibility/AXObjectCache.h:
* accessibility/AccessibilityMenuList.cpp:
(WebCore::AccessibilityMenuList::press):
* accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::postPlatformNotification):

LayoutTests:
Check if receive AXPressDidFail notification when performing AXPress action on disabled MenuList.
https://bugs.webkit.org/show_bug.cgi?id=193878

Patch by Eric Liang <ericliang@apple.com> on 2019-02-08
Reviewed by Chris Fleizach.

* accessibility/mac/press-not-work-for-disabled-menu-list.html: Added.

Canonical link: https://commits.webkit.org/208853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241190 268f45cc-cd09-0410-ab3c-d52691b4dbfc